--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "http-status": "^1.3.1",
+    "moment-timezone": "^0.5.23",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
     "osprey": "^0.5.0",
-    "validator": "^10.9.0"
+    "spdy": "^4.0.0",
+    "validator": "^10.9.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
